--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "require-dev": {
         "corneltek/phpunit-testmore": "dev-master",
-        "corneltek/universal": "~1.3",
+        "corneltek/universal": "^1.3",
         "cbednarski/pharcc": "0.2.*"
     },
     "autoload": {
